adds POST films/private impl
